Finished Grid Game

--- a/box.html
+++ b/box.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,90 +5,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <title>Grid Game Project</title>
     <style>
         table {
             table-layout: fixed;
             width: inherit !important;
-            column-rule-color: 5px solid white;
-            margin-top: 20px;
-
+            color: rgb(230, 237, 241);
         }
 
         td {
+            border: 5px solid rgb(203, 243, 241);
             width: 20px !important;
             height: 75px !important;
             max-width: 150px !important;
             max-height: 75px !important;
             min-width: 150px !important;
             min-height: 75px !important;
+        }
 
-
+        body {
+            background-image: url("grid_bg.png");
+            opacity: 0.8;
         }
     </style>
-
-
 </head>
 
 <body>
     <div class="container text-center">
-        <h1>Welcome to the Grid Game</h1>
-        <div class="row">
-            <div class="col-sm-6 bg-primary text-white p-5">Enter Player Name:</div>
-            <div class="col-sm-6 bg-dark text-white p-5">Score: </div>
+
+        <div class="row pt-2">
+            <div class="col-sm-6 bg-dark text-white p-5">
+                <h1 class="display-4">Score</h1>
+            </div>
+            <div class="col-sm-6 bg-dark text-white p-5">
+                <h1 class="display-4 text-center"><span id="score">0</span></h1>
+            </div>
         </div>
-
         <audio id="clickAudio" src="press.wav"></audio>
-        <table class="table bg-dark table-bordered text-white" id="myTable">
-
+        <audio id="loser" src="losers.mp3"></audio>
+        <audio id="winner" src="Jackpot.mp3"></audio>
+        <table class="my-5" id="myTable">
         </table>
-
-
     </div>
-
-
-
-
-
 </body>
 
 <script>
-
-    var table = document.getElementById("myTable")
+    var table = document.getElementById("myTable");
 
     var tableData = [];
     for (var i = 1; i <= 100; i++) {
         tableData.push(i);
     }
     tableData.sort(function (a, b) { return 0.5 - Math.random() });
-    console.log(tableData);
+
 
     var shuffledData = [];
-    for(var i = 1;i <= 10; i++){
+    for (var i = 1; i <= 10; i++) {
         var t = tableData.splice(0, 10);
         shuffledData.push(t);
     }
-    console.log(shuffledData)
 
+    var score = 0;
     for (var i = 0; i <= 9; i++) {
-        var tr = document.createElement("tr");                                                                                                         
+        var tr = document.createElement("tr");
         table.appendChild(tr);
         for (var j = 0; j <= 9; j++) {
             var td = document.createElement("td");
             tr.appendChild(td);
-            td.innerText = shuffledData[i][j];
+            // td.innerText = shuffledData[i][j];
+            td.id=shuffledData[i][j];
             td.addEventListener("click", function (event) {
-                console.log(event.target.innerText);
+                var cellvalue = event.target.id;
+                console.log(cellvalue);
                 document.getElementById("clickAudio").play();
+                var bombs = [2, 3, 5, 7];
+
+                if (bombs.includes(+cellvalue) == true) {
+                    document.getElementById("loser").play();
+                    alert("You Lost the Game. Game Over");
+                    window.location.reload();
+                } else if (+cellvalue == 1) {
+                    score = score + 1;
+                    document.getElementById("score").innerText = score;
+                    document.getElementById("winner").play();
+                    alert("You Won the Game. Hurray! " + score);
+                    window.location.reload();
+                } else {
+                    for(var i=0;i<10;i++){
+                        for(var j=0;j<10;j++){
+                            if(shuffledData[i][j] % cellvalue == 0){
+                                var cell = document.getElementById(shuffledData[i][j]);
+                                cell.style.backgroundImage = "url(brick.png)";
+                                cell.style.backgroundSize = "100%";
+                            }
+                        }
+                    }
+                    console.log("You are still in the game.");
+                    score = score + 1;
+                    document.getElementById("score").innerText = score;
+                }
             });
         }
-    
     }
 
-
 </script>
+
+</html>
